declarative/processor/src/test/resources/good/dataset extends Dataset.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Dataset;

@Dataset
interface X extends org.apache.jena.query.Dataset {
}
