declarative/processor/src/test/resources/bad/dataset extends unacceptable.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Dataset;

@Dataset
interface X extends Comparable {
}
